--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,28 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+.list {
+  display: flex;
+  list-style-type: none;
+  font-size: 24px;
+  font-weight:500;
+}
+
+.country-card {
+  padding-left: 40px;
+  font-size: 18px;
+}
+.country-name {
+  margin-left: 15px;
+}
+
+.country-card__item {
+font-weight: 600;
+}
+
+.country-card__info {
+  font-style: italic;
+  font-weight: 600;
+  color: darkblue;
+}
